<resources>
    <string name="app_name">KnowBetter</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="number_questions">Questions#</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="start_button">New</string>
    <string name="quit_button">Quit</string>
    <string name="drawer_open">DRAWER OPEN</string>
    <string name="drawer_close">DRAWER CLOSED</string>
    <string name="share">Share</string>
    <string name="drawer">drawer</string>
    <string name="api_not_responding">REMOTE SERVER NOT RESPONDING\nPLEASE TRY AGAIN LATER</string>
    <string name="no_connection">NO INTERNET CONNECTION\nACTIVATE AND TAP TO RETRY</string>
    <string name="unfortunately">UNFORTUNATELY, SECURITY PATCH\nCOULD NOT BE INSTALLED TO YOUR DEVICE\nAND API CALLS MAY NOT HAD BEEN SAFE</string>


    <string-array name="num_questions_options">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>


    <string-array name="type_options">
        <item>Multiple Choice</item>
        <item>True/False</item>
    </string-array>


    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>


    <string-array name="categories">
        <item>Animals</item>
        <item>Anime/Manga</item>
        <item>Any</item>
        <item>Arts</item>
        <item>Board Games</item>
        <item>Books</item>
        <item>Cartoons</item>
        <item>Celebrities</item>
        <item>Comics</item>
        <item>Computers</item>
        <item>Films</item>
        <item>Gadgets</item>
        <item>General</item>
        <item>Geography</item>
        <item>History</item>
        <item>Mathematics</item>
        <item>Music</item>
        <item>Musicals / Theater</item>
        <item>Mythology</item>
        <item>Politics</item>
        <item>Science / Nature</item>
        <item>Sports</item>
        <item>Television</item>
        <item>Vehicles</item>
        <item>Video Games</item>
    </string-array>


</resources>
